<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondo_papel_blanco_arte_35956_2379"
    android:layout_height="match_parent"
    tools:context=".facultades">

    <TextView
        android:id="@+id/bienve7"
        android:layout_width="415dp"
        android:layout_height="44dp"
        android:background="@color/blue"
        android:fontFamily="serif"
        android:paddingTop="50dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bienve8"
        android:layout_width="420dp"
        android:layout_height="93dp"
        android:background="@drawable/dibu"
        android:fontFamily="serif"
        android:paddingTop="50dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="44sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienve7"
        app:layout_constraintVertical_bias="0.137" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="327dp"
        android:layout_height="51dp"
        android:fontFamily="serif"
        android:text="@string/facultades"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bienve8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bienve8" />

    <Button
        android:id="@+id/facultades2"
        android:layout_width="204dp"
        android:layout_height="90dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/facultadesbion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/grupos2"
        app:layout_constraintTop_toTopOf="@+id/bienve9" />

    <TextView
        android:id="@+id/bienve9"
        android:layout_width="418dp"
        android:layout_height="96dp"
        android:layout_marginTop="44dp"
        android:background="@color/bluess"
        android:fontFamily="serif"
        android:paddingTop="50dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bienve8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/grupos2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/grupos2"
        android:layout_width="189dp"
        android:layout_height="91dp"
        android:layout_marginEnd="204dp"
        android:backgroundTint="#00FFFFFF"
        android:foregroundTint="#00FFFFFF"
        android:text="@string/tus_grupos"
        app:layout_constraintBottom_toBottomOf="@+id/bienve9"
        app:layout_constraintEnd_toEndOf="@+id/facultadeshome"
        app:layout_constraintStart_toStartOf="@+id/bienve6"
        app:layout_constraintTop_toTopOf="@+id/bienve9" />

    <Button
        android:id="@+id/button4"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"

        android:backgroundTint="@color/orange"
        android:text="@string/ver_m_s"
        android:textAlignment="center"
        android:textColor="#5D4037"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/orange"

        android:text="@string/ver_m_s2"
        android:textAlignment="center"
        android:textColor="#5D4037"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.335" />

    <Button
        android:id="@+id/button6"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/orange"

        android:text="@string/ver_m_s3"
        android:textAlignment="center"
        android:textColor="#5D4037"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.281"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/ciencias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:text="@string/ciencias_naturales"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienve8" />

    <Button
        android:id="@+id/button3"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/orange"
        android:text="@string/ver_m_s4"
        android:textAlignment="center"
        android:textColor="#5D4037"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienve8" />

    <TextView
        android:id="@+id/sociales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="serif"
        android:text="@string/ciencias_sociales"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/artes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="serif"
        android:text="@string/artes_y_dise_o"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/Admin"
        android:layout_width="204dp"
        android:layout_height="79dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="serif"
        android:text="@string/ciencias_economicas_y_administrativas"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.31" />

</androidx.constraintlayout.widget.ConstraintLayout>