<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_papel_blanco_arte_35956_2379"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bienve"
        android:layout_width="438dp"
        android:layout_height="141dp"
        android:background="@color/blue"
        android:fontFamily="serif"
        android:paddingTop="50dp"
        android:text="@string/bienvenidos"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="341dp"
        android:layout_height="168dp"
        android:fontFamily="serif"
        android:text="@string/esta_es_una_aplicaci_n_en_la_que_podr_s_comunicarte_con_personas_de_la_jorge_tadeo_lozano_y_diferentes_personas_acerca_de_los_temas_que_te_interesen"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienve"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/tengocuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/ya_tengo_cuenta"
        android:textColor="#8D4705"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/ingresar"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="serif"
        android:text="@string/iniciar_sesi_n"
        android:textColor="#5D4037"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tengocuenta" />

    <TextView
        android:id="@+id/cre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/soy_nuev"
        android:textColor="#8D4705"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresar"
        app:layout_constraintVertical_bias="0.299" />

    <Button
        android:id="@+id/suscribirse"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="serif"
        android:text="@string/suscribirse"
        android:textColor="#5D4037"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cre"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>