<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_papel_blanco_arte_35956_2379"
        android:orientation="vertical"
        tools:context=".suscribirse">

        <TextView
            android:id="@+id/bienve3"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:background="@color/blue"
            android:fontFamily="serif"
            android:paddingTop="50dp"
            android:text="@string/suscribirse2"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="44sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="301dp"
            android:layout_height="52dp"
            android:fontFamily="serif"
            android:layout_marginTop="-20dp"
            android:text="@string/inicie_su_cuenta2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="normal"
            android:layout_margin="50sp"
            app:layout_constraintBottom_toTopOf="@+id/correo2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bienve3"
            app:layout_constraintVertical_bias="0.454" />

        <EditText
            android:id="@+id/correo2"
            android:layout_width="342dp"
            android:layout_height="64dp"
            android:layout_margin="35sp"
            android:layout_marginTop="-20sp"
            android:autofillHints=""
            android:background="@color/black"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="serif"
            android:inputType="textEmailAddress"
            android:paddingLeft="20sp"
            android:textColor="#607D8B"
            app:layout_constraintBottom_toTopOf="@+id/iniciar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.449"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bienve3"
            app:layout_constraintVertical_bias="0.337"
            tools:text="Ingrese su correo" />

        <EditText
            android:id="@+id/contraseña2"
            android:layout_width="349dp"
            android:layout_height="64dp"
            android:autofillHints=""
            android:background="@color/black"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="serif"
            android:inputType="textPassword"
            android:paddingLeft="20sp"
            android:textColor="#607D8B"
            android:layout_margin="35sp"
            app:layout_constraintBottom_toTopOf="@+id/iniciar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/correo2"
            app:layout_constraintVertical_bias="0.203"
            tools:text="Contraseña" />

        <Button
            android:id="@+id/iniciar2"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="serif"
            android:text="@string/crear"
            android:textColor="#5D4037"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bienve3"
            app:layout_constraintVertical_bias="0.484" />
    </LinearLayout>
</layout>